# mail-verdict

./: .dev.env.example  .env.example  .gitignore  .prod.env.example  CHANGELOG.md  README.md  alembic.ini  compose.dev.yaml  compose.test.yaml  compose.yaml  docker-compose.dev.yaml  docker-compose.test.yaml  pyproject.toml
.github/workflows/: ci.yaml  release.yaml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  001_v2_initial_schema.py  002_v2_settings_jobs_account_state.py  003_add_folder_mapping.py  004_two_phase_sync.py  005_image_exceptions_folder_management.py  006_add_unified_view.py
config/: config.test.yaml  config.yaml
config/prompts/: enrichment_system.md.j2  enrichment_user.md.j2  spam_analyst.md  spam_system.md.j2  spam_user.md.j2
docker/: Dockerfile  entrypoint-dev.sh  entrypoint-prod.sh  stalwart-test.toml
src/mail_verdict/: __init__.py  __main__.py  server.py
tests/: conftest.py
tests/e2e/: conftest.py  container_manager.py  playwright-patterns.md  run_e2e.py  test_account_delete.py  test_account_sync.py  test_accounts_crud.py  test_cursor_pagination.py  test_edge_cases.py  test_feedback.py  test_folder_management.py  test_full_feedback_flow.py  test_full_rules_flow.py  test_full_spam_flow.py  test_health_api.py  test_image_exceptions.py  test_mail_actions.py  test_resilience.py  test_rules_pipeline.py  test_search_api.py  test_search_context.py  test_selection_api.py  test_settings_crud.py  test_smtp_forward.py  test_spam_pipeline.py  test_sse_events.py  test_sync_recovery.py  test_sync_stability.py  test_unified_view.py  ui-flows.md
tests/helpers/: config_factory.py  db_fixtures.py  seed.py  seed_emails.py  stalwart.py  testenv.py
tests/integration/: conftest.py  test_api.py  test_imap.py  test_mcp.py  test_postgres.py  test_qdrant.py
tests/unit/: conftest.py  test_accounts_api.py  test_actions.py  test_change_detector.py  test_change_detector_ext.py  test_conditions.py  test_config.py  test_connector.py  (+33 more)
ui/: package-lock.json  package.json  vite.config.ts
(+241 files in other folders)
