[project]
name = "mail-verdict"
version = "0.2.0"
description = "AI-powered email management: spam detection, smart rules, and vector search"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [{name = "Frederik Berg"}]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
    "httpx>=0.28.0",
    "qdrant-client>=1.12.0",
    "openai>=1.60.0",
    "aioimaplib>=2.0.0",
    "aiosmtplib>=3.0.0",
    "fastmcp>=2.0.0",
    "nh3>=0.2.0",
    "cryptography>=44.0.0",
]

[project.urls]
Homepage = "https://github.com/frederikb96/mail-verdict"
Repository = "https://github.com/frederikb96/mail-verdict"
Issues = "https://github.com/frederikb96/mail-verdict/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "aiosqlite>=0.20.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "types-PyYAML>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mail_verdict"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["tests"]
norecursedirs = ["tests/e2e", ".archive"]
markers = [
    "unit: Unit tests (no external services)",
    "integration: Integration tests (require container services)",
    "e2e: End-to-end tests (full stack with container lifecycle)",
    "slow: Tests that take >10s",
    "llm: Tests requiring LLM API access",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["sqlalchemy.ext.mypy.plugin"]

[[tool.mypy.overrides]]
module = ["fastmcp.*", "aioimaplib.*", "qdrant_client.*"]
ignore_missing_imports = true
